# cppgaim

./: CMakeLists.txt
config/: default.yaml
src/: main.cpp
src/sdl/: Error.h  helpers.h
src/utils/: FpsCounter.cpp  FpsCounter.h  ScopeGuard.h  custom_unique_ptr.h
